// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-advisor - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Azure Advisor reviews and recommendation workflows using whichever advisor_* MCP tools are available. WHEN: "run an advisor review", "check my Azure advisor recommendations", "summarize advisor findings", "what does Advisor say about my subscription", "give me an advisor health check", "audit my Azure resources with Advisor". USE FOR: end-to-end Advisor sweeps that combine the recommendation catalog, active recommendations, summaries/aggregates, and IaaC fix suggestions into one chat summary. DO NOT USE FOR: applying changes to Azure resources directly (read-only review), cost analysis beyond Advisor's cost category (use azure-cost), or non-Advisor diagnostics (use azure-diagnostics).",
  "extractedKeywords": [
    "about",
    "active",
    "advisor",
    "advisor_",
    "aggregates",
    "analysis",
    "applying",
    "audit",
    "available",
    "azure",
    "azure-cost",
    "azure-diagnostics",
    "beyond",
    "catalog",
    "category",
    "changes",
    "chat",
    "check",
    "combine",
    "cost",
    "diagnostics",
    "directly",
    "does",
    "end-to-end",
    "findings",
    "give",
    "health",
    "iaac",
    "into",
    "mcp",
    "non-advisor",
    "read-only",
    "recommendation",
    "recommendations",
    "resources",
    "review",
    "reviews",
    "subscription",
    "suggestions",
    "summaries",
    "summarize",
    "summary",
    "sweeps",
    "that",
    "tools",
    "using",
    "what",
    "when",
    "whichever",
    "with",
    "workflows",
  ],
  "name": "azure-advisor",
}
`;

exports[`azure-advisor - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "about",
  "active",
  "advisor",
  "advisor_",
  "aggregates",
  "analysis",
  "applying",
  "audit",
  "available",
  "azure",
  "azure-cost",
  "azure-diagnostics",
  "beyond",
  "catalog",
  "category",
  "changes",
  "chat",
  "check",
  "combine",
  "cost",
  "diagnostics",
  "directly",
  "does",
  "end-to-end",
  "findings",
  "give",
  "health",
  "iaac",
  "into",
  "mcp",
  "non-advisor",
  "read-only",
  "recommendation",
  "recommendations",
  "resources",
  "review",
  "reviews",
  "subscription",
  "suggestions",
  "summaries",
  "summarize",
  "summary",
  "sweeps",
  "that",
  "tools",
  "using",
  "what",
  "when",
  "whichever",
  "with",
  "workflows",
]
`;
